tests/typechecking/correct/constbool.spl
export Int main() {
	Bool a = False;
	Bool b = True;
	return 1;
}
