tests/typechecking/fail/ifconditiontype.spl
Int main()
{
	if ('a')
	{
		return 2;
	}
	return 1;
}
